--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
   margin: 70px auto;
   gap: 10px;
   padding: 50px;
-  border: 3px solid white;
+  border: 3px solid orange;
 }
 
 .row {
@@ -52,7 +52,7 @@ h1 {
 }
 
 .display {
-  align-self: self-start;
+  align-self: self-end;
   padding: 0 20px;
   margin-bottom: 20px;
   font-size: 20px;
