--- a/style.css
+++ b/style.css
@@ -61,6 +61,5 @@ h1 {
   height: 60px;
   overflow: hidden;
   background-color: gray;
-  display: flex;
-  justify-content: flex-end;
+  text-align: right;
 }
