--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
   max-width: 400px;
   margin: auto;
   gap: 10px;
-  padding: 50px;
+  padding: 50px 50px 30px;
   border: 3px solid orange;
   background-color: black;
 }
@@ -49,7 +49,7 @@ h1 {
   background-color: rgb(237, 177, 67);
   width: 70px;
   height: 70px;
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 35px;
 }
 
